# QtFindReplaceDialog

dialogs/: CMakeLists.txt  findform.cpp  findreplacedialog.cpp  findreplacedialog.h  findreplaceform.cpp  findreplaceform.h
examples/: mainwindow.h  mainwindow.ui
